src/style/sections/_hero.scss
#hero {
  min-height: 100vh;
  height: 100vh;
  display: flex;
  align-items: center;
  border-bottom: 0px;
  font-weight: 400;
  color: $white-color;
  padding: 0rem 5.6rem;
  margin-bottom: 0;
  top: 0;
  left: 0;
  bottom: 0;
  right: 0;
  z-index: -1;
  background-color: black;

  // If you want to set a background image on the hero section, uncomment these with yout custom image

  /* background: url("/src/assets/[your-image].png");
  background-position: center;
  background-size: cover; */

  @include respond(phone) {
    padding: 0rem $default-font-size;
  }

  #moon {
    height: 40em;
    width: 40em;
    @include respond(tab-land) {
      height: 32em;
      width: 32em;
    }

    @include respond(tab-port) {
      height: 30em;
      width: 30em;
    }

    @include respond(phone-xs) {
      height: 20em;
      width: 20em;
    }
    z-index: 999;
  }

  #moon path {
    fill: $medium-purple-color;
  }

  .hero-title {
    font-size: 8.6rem;
    font-weight: 700;
    margin-bottom: 3.2rem;
    text-align: left;

    @include respond(tab-land) {
      font-size: 6.5rem;
    }
    @include respond(tab-port) {
      font-size: 4.65rem;
      // text-align: center;
    }
    @include respond(phone) {
      font-size: 4.75rem;
      margin-bottom: 2.2rem;
    }
    @include respond(phone-xs) {
      font-size: 3rem;
    }
  }

  .title-span {
    font-size: 2.8rem;
    font-weight: 700;
    margin-bottom: 3.2rem;
    text-align: left;
  }

  .hero-subtitle {
    font-size: 2.8rem;
    text-align: left;

    @include respond(tab-port) {
      font-size: 2.25rem;
    }

    @include respond(phone) {
      font-size: 1.75rem;
      line-height: 1.5;
      margin-bottom: 2.2rem;
    }

    @include respond(phone-xs) {
      font-size: 1.5rem;
    }
  }

  .hero-cta {
    display: flex;

    @include respond(tab-port) {
      justify-content: center;
    }

    & a {
      font-size: 2.4rem;

      @include respond(phone) {
        font-size: 2rem;
      }
    }
  }

  .title-and-image-container {
    display: flex;
    flex-direction: row;

    @include respond(phone) {
      flex-direction: column;
      align-items: center;
      justify-content: center;
    }
  }

  .hero-text {
    flex-direction: column;
  }

  .meteor-container {
    align-items: center;
    justify-content: center;
    padding: 1em;

    @include respond(phone) {
      margin-bottom: 4.75rem;
    }
  }

  .hero-text,
  .meteor-container {
    display: flex;

    @include respond(phone) {
      width: 100%;
    }
  }

  .meteor {
    // background: $dark-blue-color;
    // background: radial-gradient(circle, $dark-blue-color 0%, $cyan-color 100%);
    height: 40em;
    width: 40em;
    border-radius: 50%;
    @include respond(tab-land) {
      height: 32em;
      width: 32em;
    }

    @include respond(tab-port) {
      height: 30em;
      width: 30em;
    }

    @include respond(phone-xs) {
      height: 20em;
      width: 20em;
    }
  }
}

